<resources>
    <string name="app_name">Number Ninja</string>
    <string name="title_play">Game</string>
    <string name="title_rankings">Rankings</string>
    <string name="title_profile">Profile</string>

    <!-- PLay strings -->
    <string name="play_remember_the_number">Remember the number!</string>
    <string name="play_play">Play</string>
    <string name="play_guess">Guess</string>
    <string name="play_max_score">Max Score: %d</string>
    <string name="play_guess_success">Correct!</string>
    <string name="play_guess_failure">Wrong :(</string>

    <!-- Profile strings -->
    <string name="profile_login_text">Login to save your progress!</string>
    <string name="profile_login_btn">Login</string>
    <string name="profile_logout_btn">Logout</string>
    <string name="profile_profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_nationality">Nationality</string>
    <string name="profile_update_btn">Update</string>

    <!-- Rankings strings -->
    <string name="rankings_flag_description">Player\'s flag</string>

    <!-- Worker Notification strings -->
    <string name="worker_notification_title">Someone has beaten your record :(</string>
    <string name="worker_notification_body">Oh no! Someone beat your record while you were offline…</string>

    <!-- Generic strings -->
    <string name="error_msg">An error occurred</string>
</resources>