<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_play">

    <fragment
        android:id="@+id/navigation_play"
        android:name="dev.nicoloakacat.numberninja.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_rankings"
        android:name="dev.nicoloakacat.numberninja.ui.rankings.RankingsFragment"
        android:label="@string/title_rankings"
        tools:layout="@layout/fragment_rankings" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.nicoloakacat.numberninja.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>