<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="dev.nicoloakacat.numberninja.UserViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- LOGIN SCREEN -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/not_logged_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="profile_login_button, profile_login_text" />

    <TextView
        android:id="@+id/profile_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_login_text"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_login_btn"
        style="@style/buttonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60" />


    <!-- PROFILE SCREEN -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/logged_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="profile_card_data, profile_update_button, profile_logout_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/profile_update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="10dp"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/profile_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_profile"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_card_name_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_card_title"
                app:layout_constraintVertical_bias="0.1"
                android:layout_marginHorizontal="50dp"
                android:hint="@string/profile_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.displayName}"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_card_nationality_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:startIconTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_card_name_box"
                app:layout_constraintVertical_bias="0.1"
                android:layout_marginHorizontal="50dp"
                >

                <AutoCompleteTextView
                    android:hint="@string/profile_nationality"
                    android:id="@+id/profile_card_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:text="@{viewModel.nationality.replace('_', ' ')}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/profile_update_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="?attr/colorSecondaryVariant"
                android:indeterminate="true"
                app:trackColor="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_card_nationality_box"
                app:layout_constraintVertical_bias="0.6"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:text="@string/profile_update_btn"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/profile_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_msg"
        style="@style/chipErrorStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:text="@string/profile_logout_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>